fix: text align left in grid cards in competencies page

--- a/src/pages/CompetenciesPage/GridCard/GridCard.module.scss
+++ b/src/pages/CompetenciesPage/GridCard/GridCard.module.scss
@@ -34,6 +34,7 @@
     font-style: normal;
     line-height: 1.19; // 38px;
     color: var(--white);
+    text-align: left;
     white-space: pre-wrap;
 
     @media screen and (width <= 1080px) {
